--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %} 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +10,7 @@
   <title>Djandgo + Stripe Checkout</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+  <script src="{% static 'main.js' %}"></script>
 </head>
 
 <body>
