--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Djandgo + Stripe Checkout</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <script src="https://js.stripe.com/v3/"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
   <script src="{% static 'main.js' %}"></script>
 </head>
