--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Djandgo + Stripe Checkout</title>
+  <title>Django + Stripe Checkout</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <script src="https://js.stripe.com/v3/"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
