--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,21 @@
-{% load static %} 
+{% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Django + Stripe Checkout</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <script src="https://js.stripe.com/v3/"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
-  <script src="{% static 'main.js' %}"></script>
-</head>
-
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Django + Stripe Checkout</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <script src="https://js.stripe.com/v3/"></script> 
+    <script src="{% static 'main.js' %}"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+  </head>
+  <body>
   <section class="section">
     <div class="container">
       <button class="button is-primary" id="submitBtn">Purchase!</button>
     </div>
   </section>
-</body>
-
+  </body>
 </html>
